Update app to support new bootstrapper